# coreutils

./: Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yaml
arch/: Cargo.toml
arch/src/: main.rs
b2sum/: Cargo.toml
b2sum/src/: main.rs
base32/: Cargo.toml
base32/src/: main.rs
base64/: Cargo.toml
base64/src/: main.rs
basename/: Cargo.toml
basename/src/: main.rs
cat/: Cargo.toml
cat/src/: main.rs
chown/: Cargo.toml
chown/src/: main.rs
coreutils/: Cargo.toml
data/: ipso_old_english.txt  test.check  test.check-bad  test.check-invalid  test1.data
dirname/: Cargo.toml
dirname/src/: main.rs
echo/: Cargo.toml
echo/src/: main.rs
env/src/: main.rs
src/: main.rs
src/b2sum/: main.rs
src/basename/: main.rs
src/dirname/: main.rs
src/wc/: main.rs
stdlib/: Cargo.toml
stdlib/src/: lib.rs
wc/: Cargo.toml
wc/src/: main.rs
whoami/: Cargo.toml
whoami/src/: main.rs
