[package]
name = "wc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
shellexpand = "2.1.2"
tabled = "0.9.0"

[[bin]]
name = "basename"
path = "src/basename/main.rs"

[[bin]]
name = "dirname"
path = "src/dirname/main.rs"

[[bin]]
name = "wc"
path = "src/wc/main.rs"
